# tasq

./: CMakeLists.txt
data/: taskdb.txt
src/: Main.c
src/Headers/: File.h
src/Sources/: File.c
